fix(css/tutorial.css): hide horizontal scrollbar

--- a/css/tutorial.css
+++ b/css/tutorial.css
@@ -304,6 +304,7 @@ button::-moz-focus-inner {
 }
 #resizable_tutorial {
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 #tutorial_contents {
     padding: 20px;
